[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1", default-features = false, features = ["rustls"] }
async-graphql-actix-web = "4.0"
async-trait = "0.1"
graphql = { path = "../graphql" }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter", "json"] }
uuid = { version = "1.1", features = ["serde", "v4"] }
env_logger = "0.10"
