[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.1", default-features = false, features = ["rustls"] }
async-graphql-actix-web = "4.0"
async-trait = "0.1"
dotenv = "0.15"
env_logger = "0.10"
graphql = { path = "../graphql" }
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter", "json"] }
typed-headers = "0.2"
uuid = { version = "1.1", features = ["serde", "v4"] }

[build-dependencies]
graphql = { path = "../graphql" }