[package]
name = "graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "4.0", features = ["chrono"] }
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
uuid = { version = "1.1", features = ["v4"] }
